# osa-is.online

./: .env  .example.env  .gitignore  Dockerfile  README.md  astro.config.mjs  docker-compose.yaml  index.html  index.js  middleware.ts  package-lock.json  package.json  run.bat  svelte.config.js  tailwind.config.js  tailwind.config.ts  vue.config.js  wrangler.jsonc  wrangler.toml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
backend/: .env.example  .example.env  Cargo.toml  Dockerfile  go.mod  go.sum  main.go  main.py  requirements.txt
backend/endpoints/: blogs.go  blogs.py  spotify.go  spotify.py
backend/src/: main.rs
backend/src/endpoints/: blogs.rs
backend/src/utils/: cache.rs  database.rs  mod.rs  objects.rs  spotify.rs
backend/utils/: blogsHelpers.go  database.go  database.py  middleware.go  objects.py  spotify.py  spotifyHelpers.go
components/: Blog.tsx  Button.tsx  Header.tsx  InputBox.tsx  IntroTItle.tsx  IntroTitle.tsx  Project.tsx  SocialAccounts.tsx  Subhead.tsx  TextArea.tsx  Triangle.tsx
data-api/: Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
go-backend/: go.mod  go.sum  main.go
lib/: prisma.ts
nuxt-app/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
prisma/: schema.prisma
public/: index.html
scss/: blinker.module.scss  name.module.scss  scroll.global.scss  text-animate.module.scss  triangle.module.scss
src/: App.vue  app.css  (+2 more)
(+136 files in other folders)
