[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
dotenvy = "0.15.6"
mongodb = "2.3.1"
redis = "0.22.3"
r2d2_redis = "0.14.0"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bson = "2.5.0"
actix-cors = "0.6.4"